# karing_sidekick_tg

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.txt
deploy/: table.sql
deploy/supervisor/: kx_sidekick.conf
docs/: concurrency.md  deploy_server.md  design.md  table.sql
src/kx_sidekick/: __init__.py  __main__.py  config.py  errors.py  models.py
src/kx_sidekick/adapters/: postgres_storage.py  telegram_bot_api.py  telegram_mtproto.py
src/kx_sidekick/ingest/: dedupe.py  local_dedupe.py  normalize.py
src/kx_sidekick/ports/: __init__.py  storage.py  telegram.py
src/kx_sidekick/services/: __init__.py  cleanup.py  media_download.py  telegram_ingestion.py
src/tg_digest/: __init__.py  __main__.py  clock.py  config.py  errors.py  models.py
src/tg_digest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tg_digest/adapters/: json_storage.py  telegram_bot_api.py  telegram_mtproto.py
src/tg_digest/ingest/: dedupe.py  normalize.py
src/tg_digest/pipeline/: filter.py  score.py  select.py
src/tg_digest/ports/: storage.py  telegram.py
src/tg_digest/services/: daily_digest.py
tests/: test_bot_api_adapter.py  test_cleanup.py  test_config.py  test_daily_digest.py  test_dedupe.py  test_filter.py  test_json_storage.py  test_local_dedupe.py  test_main.py  test_media_download.py  test_normalize.py  test_postgres_storage.py  test_score.py  test_select.py  test_telegram_ingestion.py
